--- a/contact_us.html
+++ b/contact_us.html
@@ -65,7 +65,7 @@
 
 
         
-            <img src="https://github.com/RussTP/spot_on_travel/blob/9556572c60b0e0d0c6ed3f0482a059415daef394/coastal-5527726_1920.jpg?raw=true" alt="coastal" style="width:100%;">
+            <img src="https://raw.githubusercontent.com/RussTP/spot_on_travel/dda58cd2748676aae902988cf9082ba121d7a110/images/thailandbg.jpg" alt="coastal" style="width:100%;">
               
 
    
